[gd_scene load_steps=30 format=2]

[ext_resource path="res://Sprites/Mobs/Mob3_FloatingEye/FloatingEyeV2_Front1.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Mobs/Mob3_FloatingEye/FloatingEyeV2_Front2.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Mobs/Mob3_FloatingEye/FloatingEyeV2_Front6.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Mobs/Mob3_FloatingEye/FloatingEyeV2_Front10.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Mobs/Mob3_FloatingEye/FloatingEyeV2_Front7.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Mobs/Mob3_FloatingEye/FloatingEyeV2_Front8.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Mobs/Mob3_FloatingEye/FloatingEyeV2_Front11.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Mobs/Mob3_FloatingEye/FloatingEyeV2_Front9.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Mobs/Mob3_FloatingEye/FloatingEyeV2_Front3.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Mobs/Mob3_FloatingEye/FloatingEyeV2_Front4.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Mobs/Mob3_FloatingEye/FloatingEyeV2_Front5.png" type="Texture" id=11]
[ext_resource path="res://Scripts/FlloatingEye.gd" type="Script" id=12]
[ext_resource path="res://Scripts/FloatingEyeArea2D.gd" type="Script" id=13]
[ext_resource path="res://Sprites/Mobs/Mob3_FloatingEye/FloatingEyev2_Left.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Mobs/Mob3_FloatingEye/FloatingEyeV2_Right.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Mobs/Mob3_FloatingEye/FloatingEyeDead.png" type="Texture" id=16]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "left",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "right",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "dummy",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="CanvasItemMaterial" id=3]

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.2, 0.392593, 0.67037, 1 )
colors = PoolColorArray( 0.501397, 0.017431, 0.017431, 1, 0.587334, 0.0936852, 0.0936852, 1, 0.661553, 0.123111, 0.123111, 1, 0.917647, 0.243137, 0.109804, 1, 1, 0, 0, 1 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="Curve" id=6]
min_value = -400.0
max_value = 400.0
_data = [ Vector2( 0, 400 ), 0.0, 0.0, 0, 0, Vector2( 0.213836, -119.099 ), -924.735, -924.735, 0, 0, Vector2( 1, -118.702 ), 1404.11, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 6 )

[sub_resource type="Curve" id=8]
max_value = 2.5
_data = [ Vector2( 0, 2.47635 ), 0.0, 0.0, 0, 0, Vector2( 0.996855, 0.640765 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=10]
emission_shape = 2
emission_box_extents = Vector3( 10, 10, 1 )
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, -100, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 100.0
linear_accel_random = 0.2
linear_accel_curve = SubResource( 7 )
scale = 3.0
scale_random = 1.0
scale_curve = SubResource( 9 )
color_ramp = SubResource( 5 )

[sub_resource type="Gradient" id=11]
offsets = PoolRealArray( 0.0185185, 0.307407 )
colors = PoolColorArray( 0.0462952, 0, 0.160156, 1, 0.326426, 0.199642, 0.554688, 1 )

[sub_resource type="GradientTexture" id=12]
gradient = SubResource( 11 )

[sub_resource type="ParticlesMaterial" id=13]
emission_shape = 2
emission_box_extents = Vector3( 40, 40, 1 )
flag_disable_z = true
direction = Vector3( 0, -4, 0 )
spread = 100.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 150.0
initial_velocity_random = 1.0
angular_velocity = 100.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 100.0
tangential_accel = 100.0
scale = 20.0
scale_random = 1.0
color_ramp = SubResource( 12 )

[node name="FlloatingEye" type="Node2D"]
script = ExtResource( 12 )

[node name="FloatingEye" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"
frame = 12
playing = true

[node name="FloatingEyeArea2D" type="Area2D" parent="FloatingEye"]
script = ExtResource( 13 )
health = 5000
type = "projectile"

[node name="CollisionShape2D" type="CollisionShape2D" parent="FloatingEye/FloatingEyeArea2D"]
position = Vector2( 0, -40 )
scale = Vector2( 5.5, 6 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]

[node name="ShootingTimer" type="Timer" parent="."]

[node name="BossBeaten" type="Timer" parent="."]

[node name="BloodParticles" type="Particles2D" parent="."]
material = SubResource( 3 )
position = Vector2( 0.0773871, 7.66121 )
scale = Vector2( 1.3, 1.3 )
emitting = false
amount = 200
lifetime = 0.5
one_shot = true
explosiveness = 0.5
visibility_rect = Rect2( -200, -200, 200, 200 )
process_material = SubResource( 10 )

[node name="ExplodingParticles" type="Particles2D" parent="."]
emitting = false
amount = 5000
lifetime = 10.0
one_shot = true
explosiveness = 0.5
process_material = SubResource( 13 )

[node name="DeadAnimationTimer" type="Timer" parent="."]
[connection signal="area_entered" from="FloatingEye/FloatingEyeArea2D" to="." method="CollidedWithArea"]
[connection signal="timeout" from="Timer" to="." method="TimerTimeout"]
[connection signal="timeout" from="ShootingTimer" to="." method="DoneReloading"]
[connection signal="timeout" from="BossBeaten" to="." method="QueueFreeTimeout"]
[connection signal="timeout" from="DeadAnimationTimer" to="." method="DeadAnimationTimeout"]
